fixed nav and links

--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -42,15 +42,15 @@
 
     <!-- Text-Based Navbar -->
     <nav class="text-nav">
-      <a href="/our-story.html" class="nav-item">Our Story</a>
-      <a href="/bus-tickets.html" class="nav-item">Bus Tickets</a>
-      <a href="/lottery/lottery.html" class="nav-item">Lottery</a>
-      <a href="/work-supplies.html" class="nav-item">Work Supplies</a>
-      <a href="/social-area.html" class="nav-item">Social Area</a>
-      <a href="/snacks.html" class="nav-item">Snacks</a>
-      <a href="/drinks.html" class="nav-item">Drinks</a>
-      <a href="/nicotine-products.html" class="nav-item">Nicotine Products</a>
-      <a href="/stamps.html" class="nav-item">Stamps</a>
+      <a href="../ourstory/ourstory.html" class="nav-item">Our Story</a>
+      <a href="../bus/bus-tickets.html" class="nav-item">Bus Tickets</a>
+      <a href="../lottery/lottery.html" class="nav-item">Lottery</a>
+      <a href="../work-supplies.html" class="nav-item">Work Supplies</a>
+      <a href="../social-area.html" class="nav-item">Social Area</a>
+      <a href="../snacks.html" class="nav-item">Snacks</a>
+      <a href="../drinks.html" class="nav-item">Drinks</a>
+      <a href="../nicotine-products.html" class="nav-item">Nicotine Products</a>
+      <a href="../stamps.html" class="nav-item">Stamps</a>
     </nav>
   </header>
 
@@ -140,7 +140,7 @@
     <p>© 2025 Madison Variety. All rights reserved.</p>
   </footer>
 
-  <script src="/lottery/lottery.js"></script>
+  <script src="../lottery/lottery.js"></script>
 </body>
 
 </html>
