--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -140,7 +140,7 @@
     <p>© 2025 Madison Variety. All rights reserved.</p>
   </footer>
 
-  <script src="../lottery/lottery.js"></script>
+  <script src="lottery.js"></script>
 </body>
 
 </html>
