--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -26,9 +26,11 @@
       </a>
       <div class="hours-info">
         <p><strong>Store Hours:</strong></p>
-        <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
-        <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
-        <p>Sun: Closed</p>
+        <p><strong>Store Hours:</strong></p>
+                    <p>Monday - Friday   :    5:00 AM <strong>-</strong> 7:00 PM</p>
+                    <p>Saturday     :    5:00 AM <strong>-</strong> 5:00 PM</p>
+                    <p>Sunday     :    5:00 AM <strong> - </strong> 5:00 PM</p>
+
       </div>
       <div class="contact-info">
         <p>For more inquiries, call us: +1 (732) 333-0226</p>
@@ -42,15 +44,16 @@
 
     <!-- Text-Based Navbar -->
     <nav class="text-nav">
-      <a href="../ourstory/ourstory.html" class="nav-item">Our Story</a>
-      <a href="../bus/bus-tickets.html" class="nav-item">Bus Tickets</a>
-      <a href="../lottery/lottery.html" class="nav-item">Lottery</a>
-      <a href="../work-supplies.html" class="nav-item">Work Supplies</a>
-      <a href="../social-area.html" class="nav-item">Social Area</a>
-      <a href="../snacks.html" class="nav-item">Snacks</a>
-      <a href="../drinks.html" class="nav-item">Drinks</a>
-      <a href="../nicotine-products.html" class="nav-item">Nicotine Products</a>
-      <a href="../stamps.html" class="nav-item">Stamps</a>
+      <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
+      <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
+      <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
+      <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
+      <a href="..\social\social-area.html" class="nav-item">Social Area</a>
+      <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
+      <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
+      <a href="..\nicotine\nicotine-products.html" class="nav-item">Nicotine Products</a>
+      <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+      
     </nav>
   </header>
 
