--- a/ourstory/ourstory.html
+++ b/ourstory/ourstory.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div class="header-top">
-            <a href="../index.html">
-                <img src="../pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+            <a href="..\index.html">
+                <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             </a>
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
