--- a/lottery/lottery.html
+++ b/lottery/lottery.html
@@ -21,8 +21,8 @@
   <!-- Header -->
   <header>
     <div class="header-top">
-      <a href="/index.html">
-        <img src="../pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+      <a href="\index.html">
+        <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
       </a>
       <div class="hours-info">
         <p><strong>Store Hours:</strong></p>
