--- a/bus/bus-tickets.html
+++ b/bus/bus-tickets.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="bus-ticket-info">
-                <img src="bus-image.jpg" alt="People on a Bus" class="bus-image">
+                <img src="..\pfp\bus.webp" alt="People on a Bus" class="bus-image">
                 <ul>
                     <li><strong>Affordable:</strong> Save money on gas, tolls, and parking.</li>
                     <li><strong>Convenient:</strong> Relax and let someone else do the driving.</li>
@@ -68,13 +68,13 @@
                 <div class="company-links">
                     <div class="company-item">
                         <a href="https://www.njtransit.com/" target="_blank">
-                            <img src="\pfp\images-removebg-preview (1).png" alt="NJ Transit Logo">
+                            <img src="..\pfp\images-removebg-preview (1).png" alt="NJ Transit Logo">
                             <span>NJ Transit</span>
                         </a>
                     </div>
                     <div class="company-item">
                         <a href="https://www.academybus.com/" target="_blank">
-                            <img src="academy-bus-logo.png" alt="Academy Bus Logo">
+                            <img src="..\pfp\academy.png" alt="Academy Bus Logo">
                             <span>Academy Bus</span>
                         </a>
                     </div>
