--- a/bus/bus-tickets.html
+++ b/bus/bus-tickets.html
@@ -88,7 +88,7 @@
 
             <div class="bus-map">
                 <h2>Explore NJ Transit Routes</h2>
-                <img src="nj-transit-map.png" alt="NJ Transit Route Map" class="route-map">
+                <img src="..\pfp\transit.jpg" alt="NJ Transit Route Map" class="route-map">
             </div>
         </section>
     </main>
