nicotine page done

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
             <header>
                 <nav class="text-nav">
-                    <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
                     <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
                     <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
                     <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
                     <a href="..\social\social-area.html" class="nav-item">Social Area</a>
                     <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
                     <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-                    <a href="..\nicotine\nicotine-products.html" class="nav-item">Nicotine Products</a>
+                    <a href="..\nicotine\nicotine.html" class="nav-item">Nicotine Products</a>
                     <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
                 </nav>
             </header>
