--- a/nicotine/nicotine.html
+++ b/nicotine/nicotine.html
@@ -1,118 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madison Variety</title>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="nicotine.css">
+    <title>Nicotine Products - Madison Variety</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
+    <link rel="stylesheet" href="/nicotine/nicotine.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
-        rel="stylesheet">
 </head>
-
 <body>
     <!-- Header -->
-
-    <body>
-        <header>
-            <div class="header-top">
-                <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
-                <div class="hours-info">
-                    <p><strong>Store Hours:</strong></p>
-                    <p>Monday - Friday   :    5:00 AM <strong>-</strong> 7:00 PM</p>
-                    <p>Saturday     :    5:00 AM <strong>-</strong> 5:00 PM</p>
-                    <p>Sunday     :    5:00 AM <strong> - </strong> 5:00 PM</p>
-
-                </div>
-                <div class="contact-info">
-                    <p>For more inquiries, call us: +1 (732) 679-4181</p>
-                    <p>Info@MadisonVariety.com</p>
-                    <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
-                            08857</p></a>
-                </div>
+    <header>
+        <div class="header-top">
+            <img src="../pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+            <div class="hours-info">
+                <p><strong>Store Hours:</strong></p>
+                <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
+                <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
+                <p>Sun: Closed</p>
             </div>
-            <main id="app">
-                <div class="date">
-                    <p id="clock">March 25, 2025 | 11:52:31</p>
+            <div class="contact-info">
+                <p>For more inquiries, call us: +1 (732) 333-0226</p>
+                <p>Info@MadisonVariety.com</p>
+                <p>30 W Main St, Freehold, NJ 07728</p>
+            </div>
+        </div>
+        <div class="date">
+            <p id="clock">April 07, 2025 | 10:04 AM</p>
+        </div>
+
+        <!-- Navigation Bar -->
+        <nav class="text-nav">
+            <a href="../ourstory/ourstory.html" class="nav-item">Our Story</a>
+            <a href="../bus/bus-tickets.html" class="nav-item">Bus Tickets</a>
+            <a href="../lottery/lottery.html" class="nav-item">Lottery</a>
+            <a href="../work/work-supplies.html" class="nav-item">Work Supplies</a>
+            <a href="../social/social-area.html" class="nav-item">Social Area</a>
+            <a href="../snacks/snacks.html" class="nav-item">Snacks</a>
+            <a href="../drinks/drinks.html" class="nav-item">Drinks</a>
+            <a href="../nicotine/nicotine-products.html" class="nav-item">Nicotine Products</a>
+            <a href="../stamps/stamps.html" class="nav-item">Stamps</a>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <!-- Cigarette Brands Section -->
+        <section class="cigarette-brands-section">
+            <h1>Top Cigarette Brands We Offer</h1>
+            <p>Explore our selection of premium cigarette brands. Click below to visit their official websites:</p>
+
+            <!-- Cigarette Brands List -->
+            <div class="brand-links">
+                <div class="brand-item">
+                    <a href="https://www.marlboro.com/" target="_blank">
+                        <img src="../pfp/marlboro.png" alt="Marlboro Logo">
+                        <span>Marlboro</span>
+                    </a>
                 </div>
-            </main>
+                <div class="brand-item">
+                    <a href="https://www.newport-pleasure.com/" target="_blank">
+                        <img src="../pfp/newport.png" alt="Newport Logo">
+                        <span>Newport</span>
+                    </a>
+                </div>
+                <div class="brand-item">
+                    <a href="https://www.camel.com/" target="_blank">
+                        <img src="../pfp/camel.png" alt="Camel Logo">
+                        <span>Camel</span>
+                    </a>
+                </div>
+                <div class="brand-item">
+                    <a href="https://www.nascigs.com/" target="_blank">
+                        <img src="../pfp/l&m.png" alt="American Spirit Logo">
+                        <span>L&M</span>
+                    </a>
+                </div>
+                <div class="brand-item">
+                  <a href="https://www.nascigs.com/" target="_blank">
+                      <img src="../pfp/pall mall.png" alt="American Spirit Logo">
+                      <span>L&M</span>
+                  </a>
+              </div>
+            </div>
+        </section>
 
-            <header>
-                <nav class="text-nav">
-                    <a href="ourstory.html" class="nav-item">Our Story</a>
-                    <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
-                    <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-                    <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
-                    <a href="..\social\social-area.html" class="nav-item">Social Area</a>
-                    <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
-                    <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-                    <a href="..\nicotine\nicotine-products.html" class="nav-item">Nicotine Products</a>
-                    <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
-                </nav>
-            </header>
-        </header>
-<!-- Main Content -->
-<main id="app">
-    <!-- Heading -->
-    <section class="nicotine-section">
-      <h1>Nicotine Products at Madison Variety</h1>
-      <p>We offer a wide range of nicotine products to suit your preferences. Check out our selection below!</p>
-
-      <!-- Product Grid -->
-      <div class="product-grid">
-        <!-- Example Product Card -->
-        <div class="product-card">
-          <img src="/nicotine-products/cigarettes.jpg" alt="Cigarettes">
-          <h3>Cigarettes</h3>
-          <p><strong>Price:</strong> Starting at $10.50 per pack</p>
-        </div>
-
-        <!-- Another Product Card -->
-        <div class="product-card">
-          <img src="/nicotine-products/vape.jpg" alt="Vape Devices">
-          <h3>Vape Devices</h3>
-          <p><strong>Price:</strong> Starting at $25.00 per device</p>
-        </div>
-
-        <!-- Another Product Card -->
-        <div class="product-card">
-          <img src="/nicotine-products/e-liquids.jpg" alt="E-Liquids">
-          <h3>E-Liquids (Variety of Flavors)</h3>
-          <p><strong>Price:</strong> Starting at $15.00 per bottle</p>
-        </div>
-
-        <!-- Another Product Card -->
-        <div class="product-card">
-          <img src="/nicotine-products/cigars.jpg" alt="Cigars">
-          <h3>Cigars</h3>
-          <p><strong>Price:</strong> Starting at $5.00 each</p>
-        </div>
-
-        <!-- Another Product Card -->
-        <div class="product-card">
-          <img src="/nicotine-products/chewing-tobacco.jpg" alt="Chewing Tobacco">
-          <h3>Chewing Tobacco</h3>
-          <p><strong>Price:</strong> Starting at $7.50 per pouch</p>
-        </div>
-
-        <!-- Add more product cards as needed -->
-      </div>
-
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      © 2025 Madison Variety. All rights reserved.
-    </footer>
-
+        <section class="disclaimer-section">
+          <h2>Disclaimer</h2>
+          <p>
+              Smoking causes serious health conditions including, but not limited to, lung disease, heart disease, and cancer.
+          </p>
+          <p>
+              For more information, please visit the <a href="https://www.cdc.gov/tobacco/?CDC_AAref_Val=https://www.cdc.gov/tobacco/index.htm" target="_blank">Centers for Disease Control and Prevention (CDC)</a>.
+          </p>
+      </section>
   </main>
+  
+    </main>
 
+
+    <script src="nicotine.js"></script>
+    <script src="nicotine2.js"></script>
+  
 </body>
-
 </html>
+
