--- a/nicotine/nicotine.html
+++ b/nicotine/nicotine.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicotine Products - Madison Variety</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
     <link rel="stylesheet" href="/nicotine/nicotine.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
-    <!-- Header -->
     <header>
         <div class="header-top">
-            <img src="../pfp/newmadison.png" alt="Madison Variety Logo" class="logo">
+            <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
-                <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
-                <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
-                <p>Sun: Closed</p>
+                <p>Monday - Friday : 5:00 AM <strong>-</strong> 7:00 PM</p>
+                <p>Saturday : 5:00 AM <strong>-</strong> 5:00 PM</p>
+                <p>Sunday : 5:00 AM <strong> - </strong> 5:00 PM</p>
+
             </div>
             <div class="contact-info">
-                <p>For more inquiries, call us: +1 (732) 333-0226</p>
+                <p>For more inquiries, call us: +1 (732) 679-4181</p>
                 <p>Info@MadisonVariety.com</p>
-                <p>30 W Main St, Freehold, NJ 07728</p>
+                <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
+                        08857</p></a>
             </div>
         </div>
-        <div class="date">
-            <p id="clock">April 07, 2025 | 10:04 AM</p>
-        </div>
+        <main id="app">
+            <div class="date">
+                <p id="clock">March 25, 2025 | 11:52:31</p>
+            </div>
+        </main>
 
-        <!-- Navigation Bar -->
-        <nav class="text-nav">
-            <a href="../ourstory/ourstory.html" class="nav-item">Our Story</a>
-            <a href="../bus/bus-tickets.html" class="nav-item">Bus Tickets</a>
-            <a href="../lottery/lottery.html" class="nav-item">Lottery</a>
-            <a href="../work/work-supplies.html" class="nav-item">Work Supplies</a>
-            <a href="../social/social-area.html" class="nav-item">Social Area</a>
-            <a href="../snacks/snacks.html" class="nav-item">Snacks</a>
-            <a href="../drinks/drinks.html" class="nav-item">Drinks</a>
-            <a href="../nicotine/nicotine-products.html" class="nav-item">Nicotine Products</a>
-            <a href="../stamps/stamps.html" class="nav-item">Stamps</a>
-        </nav>
+        <header>
+            <nav class="text-nav">
+                <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
+                <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
+                <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
+                <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
+                <a href="..\social\social-area.html" class="nav-item">Social Area</a>
+                <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
+                <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
+                <a href="..\nicotine\nicotine.html" class="nav-item">Nicotine Products</a>
+                <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+            </nav>
+        </header>
     </header>
 
     <!-- Main Content -->
@@ -78,31 +85,34 @@
                     </a>
                 </div>
                 <div class="brand-item">
-                  <a href="https://www.nascigs.com/" target="_blank">
-                      <img src="../pfp/pall mall.png" alt="American Spirit Logo">
-                      <span>L&M</span>
-                  </a>
-              </div>
+                    <a href="https://www.nascigs.com/" target="_blank">
+                        <img src="../pfp/pall mall.png" alt="American Spirit Logo">
+                        <span>L&M</span>
+                    </a>
+                </div>
             </div>
         </section>
 
         <section class="disclaimer-section">
-          <h2>Disclaimer</h2>
-          <p>
-              Smoking causes serious health conditions including, but not limited to, lung disease, heart disease, and cancer.
-          </p>
-          <p>
-              For more information, please visit the <a href="https://www.cdc.gov/tobacco/?CDC_AAref_Val=https://www.cdc.gov/tobacco/index.htm" target="_blank">Centers for Disease Control and Prevention (CDC)</a>.
-          </p>
-      </section>
-  </main>
-  
+            <h2>Disclaimer</h2>
+            <p>
+                Smoking causes serious health conditions including, but not limited to, lung disease, heart disease, and
+                cancer.
+            </p>
+            <p>
+                For more information, please visit the <a
+                    href="https://www.cdc.gov/tobacco/?CDC_AAref_Val=https://www.cdc.gov/tobacco/index.htm"
+                    target="_blank">Centers for Disease Control and Prevention (CDC)</a>.
+            </p>
+        </section>
+    </main>
+
     </main>
 
 
     <script src="nicotine.js"></script>
     <script src="nicotine2.js"></script>
-  
-</body>
-</html>
 
+</body>
+
+</html>
