--- a/bus-tickets.html
+++ b/bus-tickets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Tickets - Madison Variety</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="/bus/bus-tickets.css">
+    <link rel="stylesheet" href="..\css\bus-tickets.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
@@ -22,10 +22,11 @@
                 <p>Sun: Closed</p>
             </div>
             <div class="contact-info">
-                <p>For more inquiries, call us: +1 (732) 333-0226</p>
+                <p>For more inquiries, call us: +1 (732) 679-4181</p>
                 <p>Info@MadisonVariety.com</p>
-                <p>30 W Main St, Freehold, NJ 07728</p>
-            </div>
+                <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
+                        08857</p></a>
+                        </div>
         </div>
         <div class="date">
             <p id="clock">March 25, 2025 | 11:52:31</p>
@@ -33,15 +34,15 @@
 
         <!-- Text-Based Navbar -->
         <nav class="text-nav">
-            <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
-            <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
-            <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-            <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
-            <a href="..\social\social-area.html" class="nav-item">Social Area</a>
-            <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
-            <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-            <a href="..\nicotine\nicotine-products.html" class="nav-item">Nicotine Products</a>
-            <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+            <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="work-supplies.html" class="nav-item">Check Cashing</a>
+                    <a href="social-area.html" class="nav-item">Social Area</a>
+                    <a href="snacks.html" class="nav-item">Snacks</a>
+                    <a href="drinks.html" class="nav-item">Drinks</a>
+                    <a href="nicotine.html" class="nav-item">Nicotine Products</a>
+                    <a href="stamps.html" class="nav-item">Stamps</a>
             
         </nav>
     </header>
