--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Madison Variety</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="..\css\style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,15 +45,15 @@
 
             <header>
                 <nav class="text-nav">
-                    <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
-                    <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
-                    <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-                    <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
-                    <a href="..\social\social-area.html" class="nav-item">Social Area</a>
-                    <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
-                    <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-                    <a href="..\nicotine\nicotine.html" class="nav-item">Nicotine Products</a>
-                    <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+                    <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="work-supplies.html" class="nav-item">Check Cashing</a>
+                    <a href="social-area.html" class="nav-item">Social Area</a>
+                    <a href="snacks.html" class="nav-item">Snacks</a>
+                    <a href="drinks.html" class="nav-item">Drinks</a>
+                    <a href="nicotine.html" class="nav-item">Nicotine Products</a>
+                    <a href="stamps.html" class="nav-item">Stamps</a>
                 </nav>
             </header>
         </header>
@@ -189,7 +189,7 @@
         <footer>
             <p>© 2025 Madison Variety. All rights reserved.</p>
         </footer>
-        <script src="script.js"></script>
+        <script src="\java\script.js"></script>
     </body>
 
 </html>
