--- a/ourstory.html
+++ b/ourstory.html
@@ -7,7 +7,7 @@
     <title>Our Story - Madison Variety</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="ourstory.css">
+    <link rel="stylesheet" href="..\css\ourstory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
 
@@ -33,7 +33,7 @@
             <div class="contact-info">
                 <p>For more inquiries, call us: +1 (732) 679-4181</p>
                 <p>Info@MadisonVariety.com</p>
-                <p><a href="https://maps.app.goo.gl/2qhaExNmzNM9ZwaJ8" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
+                <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
             </div>
         </div>
         <div class="date">
@@ -42,14 +42,14 @@
         <header>
             <nav class="text-nav">
                 <a href="ourstory.html" class="nav-item">Our Story</a>
-                <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-                <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
-                <a href="..\social\social-area.html" class="nav-item">Social Area</a>
-                <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
-                <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-                <a href="..\nicotine\nicotine-products.html" class="nav-item">Nicotine Products</a>
-                <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="work-supplies.html" class="nav-item">Check Cashing</a>
+                    <a href="social-area.html" class="nav-item">Social Area</a>
+                    <a href="snacks.html" class="nav-item">Snacks</a>
+                    <a href="drinks.html" class="nav-item">Drinks</a>
+                    <a href="nicotine.html" class="nav-item">Nicotine Products</a>
+                    <a href="stamps.html" class="nav-item">Stamps</a>
                 
             </nav>
         </header>
@@ -102,7 +102,7 @@
             </div>
         </section>
     </main>
-    <script src="../script.js"></script>
+    <script src="\java\script.js"></script>
 
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
