--- a/lottery.html
+++ b/lottery.html
@@ -7,7 +7,7 @@
   <title>Lottery - Madison Variety</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-  <link rel="stylesheet" href="../lottery/lottery.css">
+  <link rel="stylesheet" href="..\css\lottery.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -38,9 +38,10 @@
           08857</p>
       </div>
     </div>
-    <div class="date">
-      <p id="clock">March 25, 2025 | 11:52:31</p>
-    </div>
+      <div class="date">
+          <p id="clock">March 25, 2025 | 11:52:31</p>
+      </div>
+  </main>
 
     <!-- Text-Based Navbar -->
     <header>
@@ -48,7 +49,7 @@
           <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
           <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
           <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-          <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
+          <a href="..\work\work-supplies.html" class="nav-item">Check Cashing</a>
           <a href="..\social\social-area.html" class="nav-item">Social Area</a>
           <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
           <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
