--- a/nicotine.html
+++ b/nicotine.html
@@ -7,7 +7,7 @@
     <title>Nicotine Products - Madison Variety</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="/nicotine/nicotine.css">
+    <link rel="stylesheet" href="..\css\nicotine.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -30,7 +30,6 @@
                         08857</p></a>
             </div>
         </div>
-        <main id="app">
             <div class="date">
                 <p id="clock">March 25, 2025 | 11:52:31</p>
             </div>
@@ -38,15 +37,15 @@
 
         <header>
             <nav class="text-nav">
-                <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
-                <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
-                <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-                <a href="..\work\work-supplies.html" class="nav-item">Work Supplies</a>
-                <a href="..\social\social-area.html" class="nav-item">Social Area</a>
-                <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
-                <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
-                <a href="..\nicotine\nicotine.html" class="nav-item">Nicotine Products</a>
-                <a href="..\stamps\stamps.html" class="nav-item">Stamps</a>
+                <a href="ourstory.html" class="nav-item">Our Story</a>
+                    <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
+                    <a href="lottery.html" class="nav-item">Lottery</a>
+                    <a href="work-supplies.html" class="nav-item">Check Cashing</a>
+                    <a href="social-area.html" class="nav-item">Social Area</a>
+                    <a href="snacks.html" class="nav-item">Snacks</a>
+                    <a href="drinks.html" class="nav-item">Drinks</a>
+                    <a href="nicotine.html" class="nav-item">Nicotine Products</a>
+                    <a href="stamps.html" class="nav-item">Stamps</a>
             </nav>
         </header>
     </header>
@@ -111,7 +110,7 @@
 
 
     <script src="nicotine.js"></script>
-    <script src="nicotine2.js"></script>
+    <script src="lottery2.js"></script>
 
 </body>
 
