--- a/bus-tickets.html
+++ b/bus-tickets.html
@@ -17,9 +17,9 @@
             <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
-                <p>Mon - Fri: 9:00 AM <strong>-</strong> 7:00 PM</p>
-                <p>Sat: 9:00 AM <strong>-</strong> 4:00 PM</p>
-                <p>Sun: Closed</p>
+                <p>Monday - Friday   :    5:00 AM <strong>-</strong> 7:00 PM</p>
+                <p>Saturday     :    5:00 AM <strong>-</strong> 5:00 PM</p>
+                <p>Sunday     :    5:00 AM <strong> - </strong> 5:00 PM</p>
             </div>
             <div class="contact-info">
                 <p>For more inquiries, call us: +1 (732) 679-4181</p>
@@ -97,5 +97,9 @@
     <footer>
         <p>© 2025 Madison Variety. All rights reserved.</p>
     </footer>
+
+    
+  <script src="lottery.js"></script>
+  <script src="lottery2.js"></script>
 </body>
 </html>
