--- a/lottery.html
+++ b/lottery.html
@@ -33,8 +33,7 @@
       </div>
       <div class="contact-info">
         <p>For more inquiries, call us:+1 (732) 679-4181</p>
-        <p>Info@MadisonVariety.com</p>
-        <p>3062 US-9, Old Bridge, NJ
+        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@gmail.com&su=SUBJECT" target="_blank">dolfinsnfl@gmail.com</p></a>        <p>3062 US-9, Old Bridge, NJ
           08857</p>
       </div>
     </div>
