--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
                 <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
                 <div class="hours-info">
                     <p><strong>Store Hours:</strong></p>
-                    <p>Monday - Friday   :    5:00 AM <strong>-</strong> 7:00 PM</p>
-                    <p>Saturday     :    5:00 AM <strong>-</strong> 5:00 PM</p>
-                    <p>Sunday     :    5:00 AM <strong> - </strong> 5:00 PM</p>
+                    <p>Monday - Friday : 5:00 AM <strong>-</strong> 7:00 PM</p>
+                    <p>Saturday : 5:00 AM <strong>-</strong> 5:00 PM</p>
+                    <p>Sunday : 5:00 AM <strong> - </strong> 5:00 PM</p>
 
                 </div>
                 <div class="contact-info">
                     <p>For more inquiries, call us: +1 (732) 679-4181</p>
-                    <p>Info@MadisonVariety.com</p>
+                    <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@gmail.com&su=SUBJECT"
+                            target="_blank">dolfinsnfl@gmail.com</p></a>
                     <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
                             08857</p></a>
                 </div>
