--- a/nicotine.html
+++ b/nicotine.html
@@ -25,7 +25,7 @@
             </div>
             <div class="contact-info">
                 <p>For more inquiries, call us: +1 (732) 679-4181</p>
-                <p>Info@MadisonVariety.com</p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@gmail.com&su=SUBJECT" target="_blank">dolfinsnfl@gmail.com</p></a>
                 <p><a href="https://maps.app.goo.gl/9VyyYZm5kuDeGWAo6" target="_blank">3062 US-9, Old Bridge, NJ
                         08857</p></a>
             </div>
