--- a/ourstory.html
+++ b/ourstory.html
@@ -32,8 +32,8 @@
             </div>
             <div class="contact-info">
                 <p>For more inquiries, call us: +1 (732) 679-4181</p>
-                <p>Info@MadisonVariety.com</p>
-                <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=dolfinsnfl@gmail.com&su=SUBJECT" target="_blank">dolfinsnfl@gmail.com</p></a>
+                 <p><a href="https://maps.app.goo.gl/bi1NVKSQa5q5UBb26" target="_blank">3062 US-9, Old Bridge, NJ 08857</p></a>
             </div>
         </div>
         <div class="date">
@@ -81,7 +81,7 @@
             <div class="timeline-item">
                 <img src="store-present.jpg" alt="Madison Variety Today">
                 <h3>Present Day</h3>
-                <p>Today, Madison Variety continues to be a cornerstone of the Freehold community, offering a wide range
+                <p>Today, Madison Variety continues to be a cornerstone of the Old Bridge community, offering a wide range
                     of products and services with the same friendly, family-run atmosphere we've had since day one.</p>
             </div>
         </div>
