--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Madison Variety</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="..\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -190,7 +190,7 @@
         <footer>
             <p>© 2025 Madison Variety. All rights reserved.</p>
         </footer>
-        <script src="\java\script.js"></script>
+        <script src="java\script.js"></script>
     </body>
 
 </html>
