--- a/ourstory.html
+++ b/ourstory.html
@@ -7,7 +7,7 @@
     <title>Our Story - Madison Variety</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
-    <link rel="stylesheet" href="..\css\ourstory.css">
+    <link rel="stylesheet" href="css\ourstory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
 
