--- a/bus-tickets.html
+++ b/bus-tickets.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <div class="header-top">
-            <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+            <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Monday - Friday   :    5:00 AM <strong>-</strong> 7:00 PM</p>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="bus-ticket-info">
-                <img src="..\pfp\bus.webp" alt="People on a Bus" class="bus-image">
+                <img src="pfp\bus.webp" alt="People on a Bus" class="bus-image">
                 <ul>
                     <li><strong>Affordable:</strong> Save money on gas, tolls, and parking.</li>
                     <li><strong>Convenient:</strong> Relax and let someone else do the driving.</li>
@@ -69,13 +69,13 @@
                 <div class="company-links">
                     <div class="company-item">
                         <a href="https://www.njtransit.com/" target="_blank">
-                            <img src="..\pfp\images-removebg-preview (1).png" alt="NJ Transit Logo">
+                            <img src="pfp\images-removebg-preview (1).png" alt="NJ Transit Logo">
                             <span>NJ Transit</span>
                         </a>
                     </div>
                     <div class="company-item">
                         <a href="https://www.academybus.com/" target="_blank">
-                            <img src="..\pfp\academy.png" alt="Academy Bus Logo">
+                            <img src="pfp\academy.png" alt="Academy Bus Logo">
                             <span>Academy Bus</span>
                         </a>
                     </div>
@@ -89,7 +89,7 @@
 
             <div class="bus-map">
                 <h2>Explore NJ Transit Routes</h2>
-                <img src="..\pfp\transit.jpg" alt="NJ Transit Route Map" class="route-map">
+                <img src="pfp\transit.jpg" alt="NJ Transit Route Map" class="route-map">
             </div>
         </section>
     </main>
