--- a/lottery.html
+++ b/lottery.html
@@ -22,7 +22,7 @@
   <header>
     <div class="header-top">
       <a href="\index.html">
-        <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+        <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
       </a>
       <div class="hours-info">
         <p><strong>Store Hours:</strong></p>
@@ -94,44 +94,44 @@
         <h2>Lotteries We Offer</h2>
         <div class="lottery-grid">
           <a href="https://www.powerball.com/" class="lottery-box" target="_blank">
-            <img src="../pfp/Powerball-removebg-preview.png" alt="Powerball Logo">
+            <img src="pfp\Powerball-removebg-preview.png" alt="Powerball Logo">
             <span class="balls">Powerball</span>
           </a>
           <a href="https://www.megamillions.com/" class="lottery-box" target="_blank">
-            <img src="../pfp/mega-removebg-preview.png" alt="Mega Millions Logo">
+            <img src="pfp/mega-removebg-preview.png" alt="Mega Millions Logo">
             <span class="balls">Mega Millions</span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/pick3.html" class="lottery-box" target="_blank">
-            <img src="../pfp/images-removebg-preview.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\images-removebg-preview.png" alt="New Jersey Lottery Logo">
             <span class="balls">Pick 3 </span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/pick4.html" class="lottery-box" target="_blank">
-            <img src="../pfp/pick 4.webp" alt="New Jersey Lottery Logo">
+            <img src="pfp\pick 4.webp" alt="New Jersey Lottery Logo">
             <span class="balls">Pick 4 </span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/jerseycash.html" class="lottery-box" target="_blank">
-            <img src="../pfp/cash.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\cash.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 5 </span>
           </a>
        
           <a href="https://www.njlottery.com/en-us/drawgames/pick6lotto.html" class="lottery-box" target="_blank">
-            <img src="../pfp/pick 6.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\pick 6.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Pick 6</span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/cash4life.html" class="lottery-box" target="_blank">
-            <img src="../pfp/cash4.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\cash4.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash 4 Life </span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/cashpop.html" class="lottery-box" target="_blank">
-            <img src="../pfp/cashpop.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\cashpop.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Cash Pop </span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/fastplay.html#tab-active" class="lottery-box" target="_blank">
-            <img src="../pfp/fast play.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\fast play.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Fast Play </span>
           </a>
           <a href="https://www.njlottery.com/en-us/drawgames/quickDraw.html" class="lottery-box" target="_blank">
-            <img src="../pfp/quickdraw.png" alt="New Jersey Lottery Logo">
+            <img src="pfp\quickdraw.png" alt="New Jersey Lottery Logo">
             <span class="balls"> Quick Draw</span>
           </a>
          
