--- a/nicotine.html
+++ b/nicotine.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-top">
-            <img src="..\pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
+            <img src="pfp\newmadison.png" alt="Madison Variety Logo" class="logo">
             <div class="hours-info">
                 <p><strong>Store Hours:</strong></p>
                 <p>Monday - Friday : 5:00 AM <strong>-</strong> 7:00 PM</p>
@@ -61,31 +61,31 @@
             <div class="brand-links">
                 <div class="brand-item">
                     <a href="https://www.marlboro.com/" target="_blank">
-                        <img src="../pfp/marlboro.png" alt="Marlboro Logo">
+                        <img src="pfp\marlboro.png" alt="Marlboro Logo">
                         <span>Marlboro</span>
                     </a>
                 </div>
                 <div class="brand-item">
                     <a href="https://www.newport-pleasure.com/" target="_blank">
-                        <img src="../pfp/newport.png" alt="Newport Logo">
+                        <img src="pfp\newport.png" alt="Newport Logo">
                         <span>Newport</span>
                     </a>
                 </div>
                 <div class="brand-item">
                     <a href="https://www.camel.com/" target="_blank">
-                        <img src="../pfp/camel.png" alt="Camel Logo">
+                        <img src="pfp\camel.png" alt="Camel Logo">
                         <span>Camel</span>
                     </a>
                 </div>
                 <div class="brand-item">
                     <a href="https://www.nascigs.com/" target="_blank">
-                        <img src="../pfp/l&m.png" alt="American Spirit Logo">
+                        <img src="pfp\l&m.png" alt="American Spirit Logo">
                         <span>L&M</span>
                     </a>
                 </div>
                 <div class="brand-item">
                     <a href="https://www.nascigs.com/" target="_blank">
-                        <img src="../pfp/pall mall.png" alt="American Spirit Logo">
+                        <img src="pfp\pall mall.png" alt="American Spirit Logo">
                         <span>L&M</span>
                     </a>
                 </div>
