--- a/lottery.html
+++ b/lottery.html
@@ -9,8 +9,8 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Open+Sans:wght@400;600&display=swap">
   <link rel="stylesheet" href="css\lottery.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
+  <link rel="stylesheet" href="https://use.typekit.net/ppe5fpz.css">
+      <link
     href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
     rel="stylesheet">
   <script src="https://unpkg.com/vue@3.5.13/dist/vue.global.js"></script>
