--- a/lottery.html
+++ b/lottery.html
@@ -48,7 +48,7 @@
           <a href="..\ourstory\ourstory.html" class="nav-item">Our Story</a>
           <a href="..\bus\bus-tickets.html" class="nav-item">Bus Tickets</a>
           <a href="..\lottery\lottery.html" class="nav-item">Lottery</a>
-          <a href="..\work\work-supplies.html" class="nav-item">Check Cashing</a>
+          <a href="..\work\check.html" class="nav-item">Check Cashing</a>
           <a href="..\social\social-area.html" class="nav-item">Social Area</a>
           <a href="..\snacks\snacks.html" class="nav-item">Snacks</a>
           <a href="..\drinks\drinks.html" class="nav-item">Drinks</a>
