--- a/ourstory.html
+++ b/ourstory.html
@@ -44,7 +44,7 @@
                 <a href="ourstory.html" class="nav-item">Our Story</a>
                     <a href="bus-tickets.html" class="nav-item">Bus Tickets</a>
                     <a href="lottery.html" class="nav-item">Lottery</a>
-                    <a href="work-supplies.html" class="nav-item">Check Cashing</a>
+                    <a href="check.html" class="nav-item">Check Cashing</a>
                     <a href="social-area.html" class="nav-item">Social Area</a>
                     <a href="snacks.html" class="nav-item">Snacks</a>
                     <a href="drinks.html" class="nav-item">Drinks</a>
